# iwasm

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  build.rs  go.mod  main.go
.github/workflow/: release.yml
.github/workflows/: build.yml  release.yml
api/: runtime.go  runtime_test.go
docker/: Dockerfile  Dockerfile.alpine  Dockerfile.linux  Dockerfile.osx  build_linux.sh  build_osx.sh  docker-compose.build.yml
docker/release/: Dockerfile.alpine  Dockerfile.linux  Dockerfile.osx  build_alpine.sh  build_osx.sh
example/: runtime.go  runtime_test.go
lib/: runtime.h
lib_iwasm/: build.rs
lib_iwasm/src/: buffer.rs  instance.rs
src/: aggregate_result.rs  lib.rs  prepare_data_result.rs
wasm/: processor.wasm
