[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot = "0.12.3"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
wasmer = "5.0.1"
wasmer-compiler-singlepass = "5.0.1"
wasmer-wasix = "0.31.0"

[lib]
name = "runtime"
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.27.0"

[dev-dependencies]
serde_json = "1.0.133"

[package.metadata.build-script]
build-script = true
